feature(home): new landing page, theme & toolbar component

--- a/src/app/components/docs/docs.component.html
+++ b/src/app/components/docs/docs.component.html
@@ -21,7 +21,7 @@
   </md-nav-list>
   <div td-toolbar-content layout="row" layout-align="center center" flex>
     <span>Documentation</span>
-    <span flex></span>
+    <td-toolbar hide-xs hide-sm flex layout="row"></td-toolbar>
   </div>
   <router-outlet></router-outlet>
 </td-layout-nav-list>
