--- a/src/app/components/home/home.component.scss
+++ b/src/app/components/home/home.component.scss
@@ -9,6 +9,13 @@
     width: 60px;
     margin-left: 16px;
 }
+.mat-icon-xl {
+    font-size: 120px;
+}
+.mat-icon-svg-xxl {
+    width: 90%;
+    height: auto;
+}
 .md-icon-ux {
     width: 165px;
 }
