--- a/src/app/components/layouts/nav-list/nav-list.component.html
+++ b/src/app/components/layouts/nav-list/nav-list.component.html
@@ -20,7 +20,7 @@
   </md-nav-list>
   <div td-toolbar-content layout="row" flex>
     <span>Page Title</span>
-    <span flex></span>
+    <td-toolbar hide-xs hide-sm flex layout="row"></td-toolbar>
   </div>
   <md-card>
     <md-card-title>Nav List Layout</md-card-title>
