--- a/src/app/components/layouts/nav-view/nav-view.component.html
+++ b/src/app/components/layouts/nav-view/nav-view.component.html
@@ -1,4 +1,5 @@
 <td-layout-nav logo="assets:teradata" toolbarTitle="Covalent" navigationRoute="/">
+  <td-toolbar td-toolbar-content flex layout="row"></td-toolbar>
   <div class="md-padding">
     <md-card>
       <md-card-title>Nav View</md-card-title>
