--- a/src/app/components/layouts/overview/overview.component.html
+++ b/src/app/components/layouts/overview/overview.component.html
@@ -1,4 +1,5 @@
 <td-layout-nav logo="assets:teradata" toolbarTitle="Covalent" navigationRoute="/">
+  <td-toolbar td-toolbar-content flex layout="row"></td-toolbar>
   <td-layout-card-over cardWidth="80" cardTitle="Layout Options" cardSubtitle="We offer 4 Material Design layouts for you">
     <md-card-content hide-xs hide-sm>
       <p>For your entire app or for different sections of your app, select one of these Material Design layout options:</p>
