--- a/src/app/components/style-guide/style-guide.component.html
+++ b/src/app/components/style-guide/style-guide.component.html
@@ -34,8 +34,8 @@
     </ng-template>
   </md-nav-list>
   <div td-toolbar-content layout="row" layout-align="center center" flex>
-    <span>Teradata Style Guide</span>
-    <span flex></span>
+    <span>Style Guide</span>
+    <td-toolbar hide-xs hide-sm flex layout="row"></td-toolbar>
   </div>
   <router-outlet></router-outlet>
 </td-layout-nav-list>
