--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,6 @@
-<td-layout #layout>
-  <td-navigation-drawer sidenavTitle="Covalent" logo="assets:teradata" navigationRoute="/">
-    <md-nav-list>
+<td-layout #layout #root="$implicit" dir="ltr">
+  <td-navigation-drawer flex class="theme-dark bgc-blue-grey-700" color="primary" sidenavTitle="Covalent" logo="assets:teradata" navigationRoute="/">
+    <md-nav-list flex>
       <a *ngFor="let item of routes" md-list-item (click)="layout.close()" [routerLink]="[item.route]"><md-icon>{{item.icon}}</md-icon>{{item.title}}</a>
     </md-nav-list>
   </td-navigation-drawer>
