--- a/src/app/components/components/components.component.html
+++ b/src/app/components/components/components.component.html
@@ -57,8 +57,8 @@
     </ng-template>
   </md-nav-list>
   <div td-toolbar-content layout="row" layout-align="center center" flex>
-    <span>Covalent Components &amp; Addons</span>
-    <span flex></span>
+    <span>Components &amp; Addons</span>
+    <td-toolbar hide-xs hide-sm flex layout="row"></td-toolbar>
     <button md-icon-button [mdMenuTriggerFor]="settingsMenu">
       <md-icon>more_vert</md-icon>
     </button>
