--- a/src/app/components/layouts/card-over/card-over.component.html
+++ b/src/app/components/layouts/card-over/card-over.component.html
@@ -1,5 +1,5 @@
 <td-layout-nav logo="assets:teradata" toolbarTitle="Covalent" navigationRoute="/">
-  <td-toolbar td-toolbar-content flex layout="row"></td-toolbar>
+  <td-toolbar td-toolbar-content  hide-xs hide-sm hide-md flex layout="row"></td-toolbar>
   <td-layout-card-over cardWidth="75">
     <md-card-title>Card Over Layout</md-card-title>
     <md-card-subtitle>A card overlaying a toolbar (this page is using card over)</md-card-subtitle>
