--- a/src/app/components/layouts/nav-list/nav-list.component.html
+++ b/src/app/components/layouts/nav-list/nav-list.component.html
@@ -18,9 +18,9 @@
       <p md-line> item description </p>
     </a>
   </md-nav-list>
-  <div td-toolbar-content layout="row" flex>
-    <span>Page Title</span>
-    <td-toolbar hide-xs hide-sm flex layout="row"></td-toolbar>
+  <div td-toolbar-content layout="row" layout-align="start center" flex>
+    <span hide-xs hide-lg flex>Nav List</span>
+    <td-toolbar hide-xs hide-sm hide-md flex layout="row"></td-toolbar>
   </div>
   <md-card>
     <md-card-title>Nav List Layout</md-card-title>
